--- a/css/style.css
+++ b/css/style.css
@@ -147,5 +147,7 @@ text-align: center;
     text-decoration: none;
     padding: 10px;
     border-radius: 5px;
+    color: black;
+    font-weight: 700;
 
 }
